-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0
-
None
-
-
d3c805630 (12.0)
In Preferences > Build & Run -> General we have:
- Always deploy project before running it
- Build before deploying: Build the Whole Project

When debugging a project it makes sense to have the project first being built, otherwise there is nothing to debug.
For CMake Debugging, this is not the case. You need to be able to debug the build system before the project can be actually build.