CMake Debugging: Do not build/deploy

Fixes: QTCREATORBUG-30045
Change-Id: I478abaf29462d9413f3285527459a98b1cae899d
Reviewed-by: Artem Sokolovskii <artem.sokolovskii@qt.io>
Reviewed-by: Cristian Adam <cristian.adam@qt.io>